@@ -64,6 +64,7 @@ Changes Since 0.10
 
 * docutils/writers/manpage.py
 
+  - Fix [3607063] handle lines starting with a period.
   - Fix option separating comma was bold (thanks to Bill Morris).
 
 Release 0.10 (2012-12-16)
